--- a/resources/style.css
+++ b/resources/style.css
@@ -6,23 +6,38 @@
   overflow: auto;
 }
 .Thinkup-installer .container {
-  width: 800px;
+  width: 600px;
   margin: 50px auto 20px auto;
   overflow: visible;
 }
 .Thinkup-installer .container .progressbar-container {
   height: 40px;
   border-radius: 5px;
-  width: 800px;
+  margin: 10px 0 0 0;
+  height: 30px;
+  border: none;
+  border-radius: none;
+}
+.Thinkup-installer .container .progressbar-container > .dark-label {
+  font-size: 14px;
+  top: 8px;
+  left: 8px;
+  text-align: left;
 }
 .Thinkup-installer .container .progressbar-container span,
 .Thinkup-installer .container .progressbar-container .bar span {
   text-shadow: none !important;
 }
-.Thinkup-installer .container .light-label {
-  top: 13px;
-  left: 13px;
-  font-size: 15px;
+.Thinkup-installer .container .progressbar-container .bar {
+  background: #1AAF5D;
+  border-radius: 0;
+}
+.Thinkup-installer .container .progressbar-container .bar > .light-label {
+  font-size: 14px;
+  top: 8px;
+  left: 8px;
+  text-align: left;
+  text-decoration: none;
 }
 .Thinkup-installer .container .toggle-button {
   position: absolute;
@@ -40,7 +55,7 @@
   left: 50%;
   position: relative;
   margin-left: -110px;
-  margin-top: 10px;
+  margin-top: 20px;
 }
 .Thinkup-installer .container .button-container {
   text-align: center;
@@ -48,49 +63,27 @@
 .Thinkup-installer .container .button-container .button {
   margin: 15px;
 }
-.Thinkup-installer .container .progressbar-container {
-  margin: 10px 0 0 0;
-  height: 30px;
-  border: none;
-  border-radius: none;
-}
-.Thinkup-installer .container .progressbar-container > .dark-label {
-  font-size: 14px;
-  top: 8px;
-  left: 8px;
-  text-align: left;
-}
-.Thinkup-installer .container .progressbar-container .bar {
-  background: #1AAF5D;
-  border-radius: 0;
-}
-.Thinkup-installer .container .help {
-  margin-top: -5px;
-  font-size: 14px;
-  line-height: 1.7;
+.Thinkup-installer .container .description {
+  font-size: 16px;
   color: #555;
 }
-.Thinkup-installer .container .help p {
-  padding: 0 0 20px;
+.Thinkup-installer .container .description p {
+  padding: 10px 0;
 }
-.Thinkup-installer .container .help a {
+.Thinkup-installer .container .description a {
   text-decoration: underline;
   color: black;
 }
-.Thinkup-installer .container .help b {
+.Thinkup-installer .container .description b,
+.Thinkup-installer .container .description .bold {
   text-decoration: none;
   font-weight: bold;
 }
-.Thinkup-installer .container .bar > .light-label {
-  font-size: 14px;
-  top: 8px;
-  left: 8px;
-  text-align: left;
-  text-decoration: none;
+.Thinkup-installer .container .description .center {
+  text-align: center;
 }
 .Thinkup-installer .container .running-link {
   text-align: center;
-  width: 800px;
   padding: 15px 0;
   border-bottom: 1px solid #ddd;
   border-top: 1px solid #ddd;
