--- a/resources/style.css
+++ b/resources/style.css
@@ -1,5 +1,3 @@
-/* Mixins */
-/* App Styling */
 .Thinkup-installer {
   width: 100%;
   height: 100%%;
@@ -12,11 +10,12 @@
 }
 .Thinkup-installer .container .progressbar-container {
   height: 40px;
-  border-radius: 5px;
   margin: 10px 0 0 0;
   height: 30px;
   border: none;
-  border-radius: none;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
 }
 .Thinkup-installer .container .progressbar-container > .dark-label {
   font-size: 14px;
@@ -65,7 +64,7 @@
 }
 .Thinkup-installer .container .description {
   font-size: 16px;
-  color: #555;
+  color: #333;
 }
 .Thinkup-installer .container .description p {
   padding: 10px 0;
@@ -81,6 +80,12 @@
 }
 .Thinkup-installer .container .description .center {
   text-align: center;
+}
+.Thinkup-installer .container .description img {
+  width: 100%;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
 }
 .Thinkup-installer .container .running-link {
   text-align: center;
