--- a/resources/style.less
+++ b/resources/style.less
@@ -1,23 +1,3 @@
-/* Mixins */
-
-// Transition Mixin
-@transition-property: all;
-@transition-duration: .2s;
-@transition-timing-function: ease;
-@transition-delay: 0;
-
-.transition(
-    @property: @transition-property,
-    @duration: @transition-duration,
-    @timing-function: @transition-timing-function,
-    @delay: @transition-delay) {
-        -webkit-transition: @arguments;
-        -moz-transition: @property, @duration, @timing-function;
-        -o-transition: @arguments;
-        transition: @arguments;
-}
-
-/* App Styling */
 .Thinkup-installer {
   width: 100%;
   height: 100%%;
@@ -30,11 +10,10 @@
   
     .progressbar-container {
       height: 40px; 
-      border-radius: 5px;
       margin: 10px 0 0 0;
       height: 30px;
       border: none;
-      border-radius: none;
+      .border-radius(3px);
       
       & > .dark-label {
         font-size: 14px;
@@ -93,7 +72,7 @@
     
     .description {
       font-size: 16px;
-      color: #555;
+      color: #333;
     
       p {
         padding: 10px 0;
@@ -111,6 +90,11 @@
       
       .center {
         text-align: center;
+      }
+      
+      img {
+        width: 100%;
+        .border-radius(3px);
       }
     }
     
