added mandrill integration

--- a/resources/style.less
+++ b/resources/style.less
@@ -100,11 +100,16 @@
     
     .running-link {
       text-align: center;
-      padding: 15px 0;
+      padding: 12px 0;
       border-bottom: 1px solid #ddd;
       border-top: 1px solid #ddd;
       background: #eee;
       margin-bottom: 15px;
+      line-height: 22px;
+      
+      strong {
+        font-weight: bold;
+      }
     
       a {
         text-decoration: none;
