--- a/resources/style.css
+++ b/resources/style.css
@@ -100,11 +100,15 @@
 }
 .Thinkup-installer .container .running-link {
   text-align: center;
-  padding: 15px 0;
+  padding: 12px 0;
   border-bottom: 1px solid #ddd;
   border-top: 1px solid #ddd;
   background: #eee;
   margin-bottom: 15px;
+  line-height: 22px;
+}
+.Thinkup-installer .container .running-link strong {
+  font-weight: bold;
 }
 .Thinkup-installer .container .running-link a {
   text-decoration: none;
