--- a/resources/style.css
+++ b/resources/style.css
@@ -19,35 +19,30 @@
   margin: 50px auto 20px auto;
   overflow: visible;
 }
-.Thinkup-installer .container .progressbar-container {
-  height: 40px;
-  margin: 10px 0 0 0;
-  height: 30px;
-  border: none;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
+.Thinkup-installer .container .progress-container {
+  position: relative;
+  width: 100%;
 }
-.Thinkup-installer .container .progressbar-container > .dark-label {
-  font-size: 14px;
-  top: 8px;
-  left: 8px;
-  text-align: left;
+.Thinkup-installer .container .progress-container .title {
+  padding: 10px 10px 10px 0;
+  border-bottom: solid 2px #d4d4d4;
 }
-.Thinkup-installer .container .progressbar-container span,
-.Thinkup-installer .container .progressbar-container .bar span {
-  text-shadow: none !important;
-}
-.Thinkup-installer .container .progressbar-container .bar {
+.Thinkup-installer .container .progress-container .bar {
+  position: absolute;
+  width: 0%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
   background: #1AAF5D;
-  border-radius: 0;
+  -webkit-transition: all 0.2s ease 0;
+  -moz-transition: all, 0.2s, ease;
+  -o-transition: all 0.2s ease 0;
+  transition: all 0.2s ease 0;
 }
-.Thinkup-installer .container .progressbar-container .bar > .light-label {
-  font-size: 14px;
+.Thinkup-installer .container .progress-container .spinner {
+  position: absolute;
   top: 8px;
-  left: 8px;
-  text-align: left;
-  text-decoration: none;
+  right: 0;
 }
 .Thinkup-installer .container .toggle-button {
   position: absolute;
@@ -82,6 +77,7 @@
   font-size: 16px;
   line-height: 1.7em;
   color: #555;
+  margin-top: 30px;
 }
 .Thinkup-installer .container .description p {
   padding: 10px 0;
@@ -107,8 +103,6 @@
 .Thinkup-installer .container .running-link {
   text-align: center;
   padding: 12px 0;
-  border-bottom: 1px solid #ddd;
-  border-top: 1px solid #ddd;
   background: #eee;
   margin-bottom: 15px;
   line-height: 22px;
