a better way of selecting a vm

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -22,3 +22,37 @@
     -moz-border-radius: @radius;
     border-radius: @radius;
 }
+
+
+// Box sizing
+.box-sizing(@box-sizing) {
+    -webkit-box-sizing: @box-sizing;
+    -moz-box-sizing: @box-sizing;
+    box-sizing: @box-sizing;
+}
+
+// Clearfix
+.clearfix() {
+    overflow: hidden;
+    zoom: 1;
+}
+
+
+// Floats
+.float(@side: left) {
+    display: inline;
+    float: @side;
+}
+
+.float-left() {
+    .float(left);
+}
+
+.float-right() {
+    .float(right);
+}
+
+.reset-float(@display: block) {
+    float: none;
+    display: @display;
+}
