--- a/less/style.less
+++ b/less/style.less
@@ -1,4 +1,7 @@
 .Thinkup-installer {
+  position: relative;
+  padding: 0;
+  margin: 55px;
   width: 100%;
   height: 100%%;
   overflow: auto;
@@ -26,7 +29,7 @@
         background: #1AAF5D;
         .transition(all)
       }
-      
+
       .spinner {
         position: absolute;
         top: 8px;
