--- a/resources/style.css
+++ b/resources/style.css
@@ -96,6 +96,9 @@
   border: none;
 }
 .Thinkup-installer {
+  position: relative;
+  padding: 0;
+  margin: 55px;
   width: 100%;
   height: 100%%;
   overflow: auto;
