--- a/less/style.less
+++ b/less/style.less
@@ -4,122 +4,127 @@
   height: 100%%;
   overflow: auto;
 
-  .container {
-    width: 600px;
-    margin: 50px auto 20px auto;
-    overflow: visible;
+  .wrapper {
+    position: relative;
 
-    .progress-container {
-      position: relative;
-      width: 100%;
+    .container {
+      width: 600px;
+      margin: 0 auto;
+      padding: 50px 0 20px 0;
+      overflow: visible;
 
-      .title {
-        padding: 10px 10px 10px 0;
-        border-bottom: solid 2px darken(#ededed, 10%);
-      }
+      .progress-container {
+        position: relative;
+        width: 100%;
 
-      .bar {
-        position: absolute;
-        width: 0%;
-        height: 2px;
-        bottom: 0;
-        left: 0;
-        background: #1AAF5D;
-        .transition(all)
-      }
+        .title {
+          padding: 10px 10px 10px 0;
+          border-bottom: solid 2px darken(#ededed, 10%);
+        }
 
-      .spinner {
-        position: absolute;
-        top: 8px;
-        right: 0;
-      }
-    }
+        .bar {
+          position: absolute;
+          width: 0%;
+          height: 2px;
+          bottom: 0;
+          left: 0;
+          background: #1AAF5D;
+          .transition(all)
+        }
 
-    .toggle-button {
-      position: absolute;
-      top: 253px;
-      left: 703px;
-      z-index: 4;
-      height: 28px;
-      width: 100px;
-
-      & > .button-title {
-        font-size: 12px;
-      }
-    }
-
-    .logo {
-      width: 200px;
-      left: 50%;
-      position: relative;
-      margin-left: -110px;
-      margin-top: 20px;
-    }
-
-    .button-container {
-      text-align: center;
-
-      .button {
-        margin: 15px;
-        height: 45px;
-
-        & span {
-          line-height: normal;
+        .spinner {
+          position: absolute;
+          top: 8px;
+          right: 0;
         }
       }
-    }
 
-    .description {
-      color: #333;
-      font-size: 16px;
-      line-height: 1.7em;
-      color: #555;
-      margin-top: 30px;
+      .toggle-button {
+        position: absolute;
+        top: 253px;
+        left: 703px;
+        z-index: 4;
+        height: 28px;
+        width: 100px;
 
-      p {
-        padding: 10px 0;
+        & > .button-title {
+          font-size: 12px;
+        }
       }
 
-      a {
-        text-decoration: underline;
-        color: black;
+      .logo {
+        width: 200px;
+        left: 50%;
+        position: relative;
+        margin-left: -110px;
+        margin-top: 20px;
       }
 
-      b, .bold {
-        text-decoration: none;
-        font-weight: bold;
-      }
-
-      .center {
+      .button-container {
         text-align: center;
+
+        .button {
+          margin: 15px;
+          height: 45px;
+
+          & span {
+            line-height: normal;
+          }
+        }
       }
 
-      img {
-        width: 100%;
-        .border-radius(3px);
+      .description {
+        color: #333;
+        font-size: 16px;
+        line-height: 1.7em;
+        color: #555;
+        margin-top: 30px;
+
+        p {
+          padding: 10px 0;
+        }
+
+        a {
+          text-decoration: underline;
+          color: black;
+        }
+
+        b, .bold {
+          text-decoration: none;
+          font-weight: bold;
+        }
+
+        .center {
+          text-align: center;
+        }
+
+        img {
+          width: 100%;
+          .border-radius(3px);
+        }
       }
-    }
 
-    .running-link {
-      text-align: center;
-      padding: 12px 0;
-      background: #eee;
-      margin-bottom: 15px;
-      line-height: 22px;
+      .running-link {
+        text-align: center;
+        padding: 12px 0;
+        background: #eee;
+        margin-bottom: 15px;
+        line-height: 22px;
 
-      strong {
-        font-weight: bold;
+        strong {
+          font-weight: bold;
+        }
+
+        a {
+          text-decoration: none;
+          color: blue;
+          text-shadow: none;
+        }
       }
 
-      a {
-        text-decoration: none;
-        color: blue;
-        text-shadow: none;
+      .picture {
+        width: 800px;
       }
-    }
-
-    .picture {
-      width: 800px;
     }
   }
 }
