--- a/less/dropdown.less
+++ b/less/dropdown.less
@@ -9,6 +9,10 @@
   &.active {
     .header {
       .border-radius(3px 3px 0 0);
+
+      .arrow {
+        .transform(rotate(-180deg));
+      }
     }
 
     .selection {
@@ -48,6 +52,7 @@
     	border-right: 7px solid transparent;
     	border-top: 7px solid rgba(0, 0, 0, 0.075);
     	.border-radius(4px);
+    	.transition(all);
     }
   }
 
@@ -56,11 +61,14 @@
     border: solid 2px rgba(0, 0, 0, 0.1);
     border-top: none;
     .border-radius(0 0 3px 3px);
+    .transition(all);
 
     .item {
+      position: relative;
       cursor: pointer;
-      padding: 8px 10px;
+      padding: 8px 10px 8px 25px;
       border-bottom: solid 1px rgba(0, 0, 0, 0.05);
+      .transition(all);
 
       &:hover {
         background: RGBA(87, 161, 230, 0.1);
@@ -74,12 +82,22 @@
         border: none;
       }
 
-      &.running {
-        color: #1AAF5D;
+      &.running .bubble {
+        background: #1AAF5D;
       }
 
-      &.stopped {
-        color: #C41A16;
+      &.stopped .bubble {
+        background: #cccccc;
+      }
+
+      .bubble {
+        position: absolute;
+        top: calc(~"50% - 3px");
+        left: 8px;
+        width: 8px;
+        height: 8px;
+        .border-radius(50%);
+        .transition(all);
       }
     }
   }
