--- a/less/mixins.less
+++ b/less/mixins.less
@@ -15,6 +15,16 @@
         transition: @arguments;
 }
 
+// Transform
+@transform: translate3d(0, 0, 0);
+.transform(@transform: @transform) {
+    -webkit-transform: @transform;
+    -moz-transform: @transform;
+    -ms-transform: @transform;
+    -o-transform: @transform;
+    transform: @transform;
+}
+
 // Border-radius
 @border-radius: 5px;
 .border-radius(@radius: @border-radius) {
