--- a/resources/style.css
+++ b/resources/style.css
@@ -9,20 +9,6 @@
   display: list-item;
   text-align: -webkit-match-parent;
 }
-.new-kdmodal .item {
-  padding: 10px;
-  border-bottom: solid 1px #ededed;
-  cursor: pointer;
-}
-.new-kdmodal .item:last-child {
-  border: none;
-}
-.new-kdmodal .item:hover {
-  color: #138345;
-}
-.new-kdmodal .item:hover:active {
-  color: #106c3a;
-}
 .Thinkup-dropdown {
   position: absolute;
   top: 25px;
@@ -35,6 +21,13 @@
   -webkit-border-radius: 3px 3px 0 0;
   -moz-border-radius: 3px 3px 0 0;
   border-radius: 3px 3px 0 0;
+}
+.Thinkup-dropdown.active .header .arrow {
+  -webkit-transform: rotate(-180deg);
+  -moz-transform: rotate(-180deg);
+  -ms-transform: rotate(-180deg);
+  -o-transform: rotate(-180deg);
+  transform: rotate(-180deg);
 }
 .Thinkup-dropdown.active .selection {
   display: block;
@@ -77,6 +70,10 @@
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
+  -webkit-transition: all 0.2s ease 0;
+  -moz-transition: all, 0.2s, ease;
+  -o-transition: all 0.2s ease 0;
+  transition: all 0.2s ease 0;
 }
 .Thinkup-dropdown .selection {
   display: none;
@@ -85,11 +82,20 @@
   -webkit-border-radius: 0 0 3px 3px;
   -moz-border-radius: 0 0 3px 3px;
   border-radius: 0 0 3px 3px;
+  -webkit-transition: all 0.2s ease 0;
+  -moz-transition: all, 0.2s, ease;
+  -o-transition: all 0.2s ease 0;
+  transition: all 0.2s ease 0;
 }
 .Thinkup-dropdown .selection .item {
+  position: relative;
   cursor: pointer;
-  padding: 8px 10px;
+  padding: 8px 10px 8px 25px;
   border-bottom: solid 1px rgba(0, 0, 0, 0.05);
+  -webkit-transition: all 0.2s ease 0;
+  -moz-transition: all, 0.2s, ease;
+  -o-transition: all 0.2s ease 0;
+  transition: all 0.2s ease 0;
 }
 .Thinkup-dropdown .selection .item:hover {
   background: rgba(87, 161, 230, 0.1);
@@ -100,11 +106,25 @@
 .Thinkup-dropdown .selection .item:last-child {
   border: none;
 }
-.Thinkup-dropdown .selection .item.running {
-  color: #1AAF5D;
+.Thinkup-dropdown .selection .item.running .bubble {
+  background: #1AAF5D;
 }
-.Thinkup-dropdown .selection .item.stopped {
-  color: #C41A16;
+.Thinkup-dropdown .selection .item.stopped .bubble {
+  background: #cccccc;
+}
+.Thinkup-dropdown .selection .item .bubble {
+  position: absolute;
+  top: calc(50% - 3px);
+  left: 8px;
+  width: 8px;
+  height: 8px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  -webkit-transition: all 0.2s ease 0;
+  -moz-transition: all, 0.2s, ease;
+  -o-transition: all 0.2s ease 0;
+  transition: all 0.2s ease 0;
 }
 .Thinkup-installer {
   position: relative;
