--- a/less/dropdown.less
+++ b/less/dropdown.less
@@ -6,7 +6,7 @@
   height: initial;
   overflow: visible;
 
-  &.active {
+  &.choose, &.turnOff {
     .header {
       .border-radius(3px 3px 0 0);
 
@@ -17,6 +17,34 @@
 
     .selection {
       display: block;
+    }
+  }
+
+  &.choose {
+    .header {
+      border-color: RGBA(87, 161, 230, 1);
+    }
+
+    .selection .item:hover {
+      background: RGBA(87, 161, 230, 0.1);
+
+      &:active {
+        background: RGBA(87, 161, 230, 0.15);
+      }
+    }
+  }
+
+  &.turnOff {
+    .header {
+      border-color: RGBA(232, 147, 153, 1);
+    }
+
+    .selection .item:hover {
+      background: RGBA(232, 147, 153, 0.1);
+
+      &:active {
+        background: RGBA(232, 147, 153, 0.15);
+      }
     }
   }
 
@@ -70,12 +98,8 @@
       border-bottom: solid 1px rgba(0, 0, 0, 0.05);
       .transition(all);
 
-      &:hover {
-        background: RGBA(87, 161, 230, 0.1);
-
-        &:active {
-          background: RGBA(87, 161, 230, 0.15);
-        }
+      &:nth-child(odd) {
+        background: #FCFCFC;
       }
 
       &:last-child {
