added bubble to modal

--- a/less/modal.less
+++ b/less/modal.less
@@ -14,9 +14,10 @@
   }
 
   .item {
-    padding: 10px;
-    border-bottom: solid 1px #ededed;
+    position: relative;
     cursor: pointer;
+    padding: 8px 10px 8px 25px;
+    border-bottom: solid 1px #ededed;
 
     &:last-child {
       border: none;
@@ -28,6 +29,17 @@
       &:active {
         color: darken(rgb(26, 175, 93), 15%);
       }
+    }
+
+    .bubble {
+      position: absolute;
+      top: calc(~"50% - 2px");
+      left: 8px;
+      width: 8px;
+      height: 8px;
+      background: #1AAF5D;
+      .border-radius(50%);
+      .transition(all);
     }
   }
 }
