--- a/less/style.less
+++ b/less/style.less
@@ -29,7 +29,7 @@
           bottom: 0;
           left: 0;
           background: #1AAF5D;
-          .transition(all)
+          .transition(all);
         }
 
         .spinner {
