--- a/resources/style.css
+++ b/resources/style.css
@@ -10,9 +10,10 @@
   text-align: -webkit-match-parent;
 }
 .new-kdmodal .item {
-  padding: 10px;
-  border-bottom: solid 1px #ededed;
+  position: relative;
   cursor: pointer;
+  padding: 8px 10px 8px 25px;
+  border-bottom: solid 1px #ededed;
 }
 .new-kdmodal .item:last-child {
   border: none;
@@ -22,6 +23,21 @@
 }
 .new-kdmodal .item:hover:active {
   color: #106c3a;
+}
+.new-kdmodal .item .bubble {
+  position: absolute;
+  top: calc(50% - 2px);
+  left: 8px;
+  width: 8px;
+  height: 8px;
+  background: #1AAF5D;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  -webkit-transition: all 0.2s ease 0;
+  -moz-transition: all, 0.2s, ease;
+  -o-transition: all 0.2s ease 0;
+  transition: all 0.2s ease 0;
 }
 .Thinkup-dropdown {
   position: absolute;
