--- a/less/style.less
+++ b/less/style.less
@@ -107,9 +107,12 @@
       .running-link {
         text-align: center;
         padding: 12px 0;
-        background: #eee;
+        background: #FCFCFC;
         margin-bottom: 15px;
         line-height: 22px;
+        border: solid 1px darken(#FCFCFC, 5%);
+        border-top: none;
+        .border-radius(0 0 4px 4px);
 
         strong {
           font-weight: bold;
