styling of active state of selector

--- a/less/dropdown.less
+++ b/less/dropdown.less
@@ -63,7 +63,7 @@
         color: #fff;
 
         .bubble {
-          background: #ededed;
+          background: rgba(255, 255, 255, 0.6);
         }
       }
 
