--- a/resources/style.css
+++ b/resources/style.css
@@ -105,7 +105,7 @@
   color: #fff;
 }
 .Thinkup-dropdown .selection .item.active .bubble {
-  background: #ededed;
+  background: rgba(255, 255, 255, 0.6);
 }
 .Thinkup-dropdown .selection .item .bubble {
   position: absolute;
