made modal have better message

--- a/less/modal.less
+++ b/less/modal.less
@@ -13,6 +13,12 @@
     }
   }
 
+  .description {
+    text-align: center;
+    margin: 0 0 10px 0;
+    color: #BB3C2A;
+  }
+
   .item {
     position: relative;
     cursor: pointer;
