--- a/less/style.less
+++ b/less/style.less
@@ -104,14 +104,24 @@
         }
       }
 
+      .vm-instructions {
+        text-align: center;
+        padding: 12px 0;
+        background: #FCFCFC;
+        line-height: 22px;
+        border: solid 1px darken(#FCFCFC, 5%);
+        border-top: none;
+        font-weight: bold;
+        .border-radius(0 0 4px 4px);
+      }
+
       .running-link {
         text-align: center;
         padding: 12px 0;
         background: #FCFCFC;
-        margin-bottom: 15px;
+        margin: -5px 0 15px 0;
         line-height: 22px;
         border: solid 1px darken(#FCFCFC, 5%);
-        border-top: none;
         .border-radius(0 0 4px 4px);
 
         strong {
